<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="product_name">FX Yield Manager</string>
    <string name="product_usp">Increase your yield, lower your risk, make markets for your customers</string>
    <string name="app_name">Yield Manager</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Yield Manager</string>
    <string name="login_button_text">Login</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="request_demo_button_text">Request a Demo</string>
    <string name="copyright_text">© Integral Development Corp. 2014</string>
    <string name="login_progress_message">Logging in ...</string>
    <string name="loading_progress_message">Loading...</string>
    <string name="login_remember_me">Remember me</string>
    <string name="login_hint_org">Organization</string>
    <string name="login_hint_username">User Name</string>
    <string name="login_hint_password">Password</string>
    <string name="logout_confirm_message">Are you sure you want to exit?</string>
    <string name="logout_confirm_yes">Yes</string>
    <string name="logout_confirm_no">No</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="error_message_no_connectivity">No Internet Connection</string>
    <string name="error_cannot_connect_to_server">Cannot connect to server.. Try again later</string>
    <string name="error_not_logged_in">Not Logged in</string>
    <string name="error_equal_401">Error=401</string>
    <string name="server_demo">demo</string>
    <string name="server_demo3">demo3</string>
    <string name="risk_capacity_title">Risk Capacity</string>
    <string name="risk_capacity_yield_usd_mio_text"><![CDATA[Yield<br/>($/Mio)]]></string>
    <string name="risk_capacity_volume_usd_thousand_text"><![CDATA[Volume<br />($\'000)]]></string>
    <string name="risk_capacity_realized_pnl_usd_text"><![CDATA[Realized <br />P&amp;L ($)]]></string>
    <string name="risk_capacity_unrealized_pnl_usd_text"><![CDATA[Unrealized P&amp;L ($)]]></string>
    <string name="data_update_title">CELLULAR RATE UPDATE FREQUENCY</string>
    <string name="data_update_warning">Please note that using this application over cellular data networks may incur additional charges from your network provider. Manage data usage by selecting the appropriate value.</string>
    <string name="pref_frequency">Frequency</string>
    <string name="pref_title">Select Frequency</string>
    <string name="about">This application is provided by Integral Development Corporation.  \n\nIntegral’s electronic trading network FX Grid® allows all market participants to design and deploy their own private FX marketplaces. Hundreds of major institutions around the world have delivered branded trading services to their customers through this open cloud-based platform. \n\nMore information about Integral’s complete suite of on demand services are available at www.integral.com. \n\n© 2014 Integral Development Corp. All rights reserved. Integral technology is protected under U.S. Patent Nos. 6,347,307 and 7,882,011 B2, patent pending applications and related intellectual property.</string>
    <string name="second_two">2 Second</string>
    <string name="seconds_five">5 Seconds</string>
    <string name="seconds_fifteen">15 Seconds</string>
    <string name="seconds_thirty">30 Seconds</string>
    <string name="manual">Manual</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string-array name="datefetchoptions_display">
        <item>2 Second</item>
        <item>5 Second</item>
        <item>10 Second</item>
        <item>15 Second</item>
        <item>30 Second</item>
        <item>1 Minute</item>
        <item>Manual</item>
    </string-array>

    <integer-array name="datafetchOptions_values">
        <item>2</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>-1</item>
    </integer-array>

    <string name="title_activity_about">About</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_request_demo">RequestDemoActivity</string>
    <string name="req_demo_title">Request More Product Information</string>
    <string name="req_demo_subtitle">Please complete the form below and we will contact you shortly:</string>
    <string name="req_demo_firstname">First Name</string>
    <string name="req_demo_lastname">Last Name</string>
    <string name="title_activity_splash_screen">Yield Manager</string>
    <string name="volume_chart_title">Volume Chart</string>
    <string name="yield_chart_title">Yield Chart</string>
    <string name="rate_chart_title">Rate Chart</string>
    <string name="settings_ccypair_selected">Selected</string>
    <string name="settings_ccypair_available">Available</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string-array name="nav_drawer_menu_items">
        <item>Dashboard</item>
        <item>Risk Warehouse</item>
        <item>Currency Pairs</item>
        <item>Risk Policies</item>
        <item>Customers</item>
        <item>Routing Rules</item>
    </string-array>

    <string name="title_activity_yield_details">YieldDetailsActivity</string>

</resources>
