<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
    xmlns:fontawesometext="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="prafulmantale.praful.com.yaym.activities.LoginActivity"
    android:background="@drawable/welcome_backgroud"
    android:id="@+id/containerPanel">


    <RelativeLayout
        android:id="@+id/rlCenter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/drop_shadow"
        android:gravity="center_vertical"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:visibility="gone"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ivLogo"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ym_logo"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:scaleType="fitCenter"
            android:background="@drawable/bottom_border_black"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            />

        <LinearLayout
            android:background="@android:color/white"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivLogo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"
            android:orientation="vertical"
            android:id="@+id/linearLayout"

            android:layout_marginBottom="5dp">

            <LinearLayout
                android:background="@android:color/white"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ivLogo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="2dp"
                android:orientation="horizontal"
                android:padding="2dp">

                <com.beardedhen.androidbootstrap.FontAwesomeText
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    fontawesometext:fa_icon="fa-bank"
                    android:background="@drawable/item_back_icons"
                    android:id="@+id/bankIcon"
                    android:layout_marginLeft="25dp"
                    android:textSize="10sp"
                    android:textAlignment="center"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:paddingBottom="4dp"
                    android:paddingTop="6dp"
                    />

                <prafulmantale.praful.com.yaym.widgets.TypefacedEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etOrganization"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/login_hint_org"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="5dp"
                    android:padding="5dp"
                    android:textSize="@dimen/login_input_text_size"
                    android:background="@drawable/loginscreen_edit_text_style"
                    android:textColorHint="#999999"
                    android:textColor="#000000"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    custom:typeface="fonts/OpenSans-Regular.ttf"
                    />
            </LinearLayout>
            <LinearLayout
                android:background="@android:color/white"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ivLogo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:orientation="horizontal"
                android:padding="2dp">

                <com.beardedhen.androidbootstrap.FontAwesomeText
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    fontawesometext:fa_icon="fa-user"
                    android:background="@drawable/item_back_icons"
                    android:id="@+id/userIcon"
                    android:layout_marginLeft="25dp"
                    android:textSize="@dimen/login_input_text_size"
                    android:textAlignment="center"
                    android:paddingTop="4dp"
                    android:paddingRight="4dp"
                    android:paddingLeft="4dp"
                    />
                <prafulmantale.praful.com.yaym.widgets.TypefacedEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/etUserName"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/login_hint_username"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="5dp"
                    android:textSize="@dimen/login_input_text_size"
                    android:background="@drawable/loginscreen_edit_text_style"
                    android:textColorHint="#999999"
                    android:padding="5dp"
                    android:textColor="#000"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    custom:typeface="fonts/OpenSans-Regular.ttf"
                    />
            </LinearLayout>

            <LinearLayout
                android:background="@android:color/white"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ivLogo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:orientation="horizontal"
                android:padding="2dp">

                <com.beardedhen.androidbootstrap.FontAwesomeText
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    fontawesometext:fa_icon="fa-lock"
                    android:background="@drawable/item_back_icons"
                    android:id="@+id/lockIcon"
                    android:layout_marginLeft="25dp"
                    android:textSize="@dimen/login_input_text_size"
                    android:textAlignment="center"
                    android:paddingTop="4dp"
                    android:paddingRight="5dp"
                    android:paddingLeft="4dp"
                    />
                <prafulmantale.praful.com.yaym.widgets.TypefacedEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:id="@+id/etPassword"
                    android:layout_gravity="center_horizontal"
                    android:hint="@string/login_hint_password"
                    android:layout_marginRight="5dp"
                    android:textSize="@dimen/login_input_text_size"
                    android:background="@drawable/loginscreen_edit_text_style"
                    android:textColorHint="#999999"
                    android:padding="5dp"
                    android:textColor="#000"
                    android:singleLine="true"
                    android:imeOptions="actionDone"
                    custom:typeface="fonts/OpenSans-Regular.ttf"
                    />
            </LinearLayout>

            <RadioGroup
                android:id="@+id/rgServerGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal">
                <prafulmantale.praful.com.yaym.widgets.TypefacedRadioButton
                    android:id="@+id/demoServer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:singleLine="true"
                    android:text="@string/server_demo"
                    android:checked="true"
                    custom:typeface="fonts/OpenSans-Regular.ttf"/>

                <prafulmantale.praful.com.yaym.widgets.TypefacedRadioButton
                    android:id="@+id/demo3Server"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:singleLine="true"
                    android:text="@string/server_demo3"
                    android:checked="false"
                    custom:typeface="fonts/OpenSans-Regular.ttf"/>

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="25dp"
                android:layout_gravity="center_horizontal"
                >

                <prafulmantale.praful.com.yaym.widgets.TypefacedButton
                    android:id="@+id/btnCancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:background="@drawable/cancel_button_style"
                    android:text="@string/cancel_button_text"
                    android:layout_gravity="right"
                    android:onClick="hideLogin"
                    android:layout_marginLeft="10dp"
                    android:layout_alignParentRight="true"
                    android:textSize="14sp"
                    android:textColor="@android:color/white"
                    custom:typeface="fonts/OpenSans-Regular.ttf"
                    />
                <prafulmantale.praful.com.yaym.widgets.TypefacedButton
                    android:id="@+id/btnLogin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:background="@drawable/launch_login_style"
                    android:text="@string/login_button_text"
                    android:layout_gravity="right"
                    android:onClick="doLogin"
                    android:layout_marginLeft="10dp"
                    android:layout_alignParentRight="true"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    custom:typeface="fonts/OpenSans-Bold.ttf"
                    />

            </LinearLayout>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_remember_me"
                android:id="@+id/cbRemember"
                android:layout_alignParentLeft="true"
                android:visibility="visible"
                android:layout_marginLeft="25dp"/>
        </LinearLayout>

    </RelativeLayout>

    <prafulmantale.praful.com.yaym.widgets.TypefacedTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright_text"
        android:id="@+id/tvCopyright"
        android:layout_below="@+id/rlCenter"
        android:layout_centerHorizontal="true"
        android:textColor="#000"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textSize="@dimen/login_copyright_text_size"
        custom:typeface="fonts/Roboto-Thin.ttf"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/llSignUpBar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:background="@android:color/transparent"
        android:layout_alignParentBottom="true"
        android:weightSum="1">

        <prafulmantale.praful.com.yaym.widgets.TypefacedButton
            android:id="@+id/btnSignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/request_demo_button_text"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@drawable/register_button_style"
            android:layout_weight="0.5"
            android:textSize="14sp"
            custom:typeface="fonts/OpenSans-Regular.ttf"
            />


        <prafulmantale.praful.com.yaym.widgets.TypefacedButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnLoginWelcom"
            android:text="@string/login_button_text"
            android:background="@drawable/launch_login_style"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:textColor="@android:color/white"
            android:layout_alignParentRight="true"
            android:onClick="showLogin"
            android:textSize="14sp"
            android:layout_weight="0.5"
            custom:typeface="fonts/OpenSans-Regular.ttf"
            />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="25dp"
        android:id="@+id/rlWelcomeMessage"
        >
        <prafulmantale.praful.com.yaym.widgets.TypefacedTextView
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/product_name"
            android:id="@+id/tvAppName"
            android:textStyle="normal"
            android:textSize="30sp"
            android:padding="1dp"
            android:textColor="@android:color/white"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="43dp"
            custom:typeface="fonts/OpenSans-Regular.ttf"/>

        <prafulmantale.praful.com.yaym.widgets.TypefacedTextView
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/product_usp"
            android:id="@+id/tvAppUSP"
            android:textStyle="normal"
            android:gravity="left"
            android:padding="1dp"
            android:textSize="20sp"
            android:textColor="@color/app_usp_color"
            android:layout_below="@+id/tvAppName"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="35dp"
            custom:typeface="fonts/OpenSans-Regular.ttf"
            />
    </RelativeLayout>
</RelativeLayout>
